# py_ai_apis_gpt

./: .env.b200.example  .env.example  .env.h100.example  .env.h200.example  .gitignore  README.md
.claude/: settings.local.json
docs/: b200-ubuntu-deploy.md  h100-ubuntu-deploy.md  h200-ubuntu-deploy.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: ui.tsx
frontend/src/routes/: AdminPage.tsx  AuthPage.tsx
gateway-rs/: Cargo.toml  Dockerfile
gateway-rs/migrations/: 001_init.sql
gateway-rs/src/: auth.rs  config.rs  db.rs  error.rs  gpu.rs  main.rs  models.rs  queue.rs  routes.rs  services.rs  validation.rs
infra/: docker-compose.yml  requirements-h100-system.txt
infra/systemd/: py-ai-apis-gpt.logrotate  py-ai-gateway.service  py-ai-ltx-worker.service  py-ai-text-worker.service
postman/: cloud.postman_environment.json  gateway.postman_collection.json  local.postman_environment.json
scripts/: b200-services.sh  deploy_b200.sh  deploy_h100.sh  deploy_h200.sh  dev-local.ps1  download_ltx_assets.py  h100-services.sh  h200-services.sh  install_ltx_repo.ps1
services/ltx-worker/: Dockerfile  pyproject.toml
services/ltx-worker/app/: config.py  ltx_runner.py  main.py  media.py  schemas.py  storage.py
services/ltx-worker/app/ltx_patch/: patch.py  remote_encoder.py
services/ltx-worker/tests/: test_budget.py  test_ltx_dependency_compat.py  test_schemas.py
services/text-worker/: Dockerfile  pyproject.toml
services/text-worker/app/: config.py  main.py  rag.py  scheduler.py  schemas.py
services/text-worker/tests/: test_scheduler_utils.py
shared/openapi/: openapi.yaml
