[project]
name = "ltx-worker"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aioboto3>=13",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pillow>=10",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "torch>=2.7,<2.8",
    "torchaudio>=2.7,<2.8",
    "transformers>=4.52,<5",
    "uvicorn[standard]>=0.30",
    "ltx-core @ git+https://github.com/Lightricks/LTX-2.git@41d924371612b692c0fd1e4d9d94c3dfb3c02cb3#subdirectory=packages/ltx-core",
    "ltx-pipelines @ git+https://github.com/Lightricks/LTX-2.git@41d924371612b692c0fd1e4d9d94c3dfb3c02cb3#subdirectory=packages/ltx-pipelines",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
