[project]
name = "text-worker"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.1",
    "fastapi>=0.115",
    "httpx>=0.27",
    "numpy>=1.26",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "qdrant-client>=1.12",
    "sentence-transformers>=3.2",
    "torch>=2.7,<2.8",
    "transformers>=4.52,<5",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
